# PipeERP

./: .gitignore  MANUFACTURING_WEIGHT_TEST_CASES.md  README.md  README_APPLY.md  SPRINT1_TEST_CASES.md  SPRINT2_TEST_CASES.md  SPRINT3_TEST_CASES.md  pyproject.toml  requirements-ci.txt  requirements.txt
.github/: feature-fix.patch.gz.b64
.github/workflows/: feature-validation.yml  fix-feature-lint.yml  main-verification-status.yml  quality.yml  release.yml  smoke-tests.yml  windows-build.yml  windows-installer.yml
app/: __init__.py  main.py
app/core/: __init__.py  app_paths.py  config.py  logging_setup.py
app/database/: __init__.py  completion_summary_schema.py  connection.py  migrations.py  sales_finance_v10_schema.py  schema.py
app/models/: user.py
app/repositories/: accounting_repository.py  admin_only_crm_repository.py  admin_repository.py  advanced_manufacturing_repository.py  automated_inventory_repository.py  base_material_scrap_cost_repository.py  crm_repository.py  customer_statement_accounting_repository.py  detailed_return_refund_repository.py  enhanced_manufacturing_repository.py  inventory_repository.py  invoice_repository.py  manufacturing_repository.py  order_completion_manufacturing_repository.py  partner_repository.py  print_settings_repository.py  product_repository.py  production_run_repository.py  purchase_repository.py  quotation_repository.py  return_aware_treasury_repository.py  return_invoice_repository.py  return_refund_invoice_repository.py  (+15 more)
docs/: .implementation_status_tmp  .permissions-product-weight-prechange  .purchase-payment-removal-marker  COMPLETION_ROADMAP.md  ERP_IMPLEMENTATION_ROADMAP.md
installer/: PipeERP.iss
pipeerp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_a4_invoice.py  test_a4_invoice_background.py  test_accounting_invoices.py  test_appearance_ranges.py  test_application_smoke.py  test_completion_full_and_optional.py  test_customer_statement_accounting_repository.py  test_fifo_costing.py  test_final_production_completion_wizard.py  test_first_run_setup.py  test_manufacturing.py  test_manufacturing_completion_summary.py  test_migrations.py  test_multi_line_orders.py  test_operational_reset.py  test_print_phone_utils.py  test_production_completion_wizard.py  test_purchase_loss_costing.py  test_quotations.py  test_recent_regressions.py  test_release_metadata.py  test_responsive_accounts_layout.py  test_sales_finance_v10_migration.py  test_sales_navigation_delegate.py  test_schema_v9_runs_and_weight_sales.py  test_standalone_weight_sales.py  test_table_scrolling.py  test_thermal_receipt.py  test_weight_invoice_calculator.py  test_weight_invoice_repository.py  test_weight_invoice_statement_acceptance.py
(+82 files in other folders)
