[project]
name = "pipeerp"
version = "0.1.0"
description = "Offline Arabic ERP for plastic pipe manufacturing factories"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.setuptools.package-data]
app = ["assets/print/*.png"]
