[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeerp"
version = "0.1.1"
description = "Offline Arabic ERP for plastic pipe manufacturing factories"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7.0",
    "openpyxl>=3.1.5",
    "tzdata",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]
build = [
    "nuitka>=2.6,<3",
    "pillow>=10.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
