[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeerp"
version = "0.2.0"
description = "Offline Arabic ERP for plastic pipe manufacturing factories"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7.0",
    "openpyxl>=3.1.5",
    "tzdata",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]
build = [
    "nuitka>=2.6,<3",
    "pillow>=10.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "app/repositories/accounting_repository.py",
    "app/repositories/admin_repository.py",
    "app/repositories/crm_repository.py",
    "app/repositories/detailed_return_refund_repository.py",
    "app/repositories/enhanced_manufacturing_repository.py",
    "app/repositories/manufacturing_repository.py",
    "app/repositories/print_settings_repository.py",
    "app/repositories/return_aware_treasury_repository.py",
    "app/repositories/return_invoice_repository.py",
    "app/repositories/return_refund_repository.py",
    "app/repositories/treasury_repository.py",
    "app/repositories/treasury_invoice_repository.py",
    "app/services/invoice_service.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/ui/weight_card_sales_page.py" = ["I001", "F401"]
